# cubist

./: .gitattributes  .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE-MIT  NOTICE  README.md  rust-toolchain.toml
cubist-cli/: Cargo.toml
cubist-cli/src/: cli.rs  commands.rs  cube.rs  daemon.rs  deployment_watcher.rs  lib.rs  main.rs  stylist.rs
cubist-cli/src/commands/: axelar.rs  chain_manager.rs  compile.rs  gen.rs  new.rs  pre_compile.rs  relayer.rs  tests.rs
cubist-cli/src/cube/: git.rs  js.rs  rs.rs  template.rs  ts.rs  utils.rs
cubist-cli/templates/axelar/: relay.js.tpl
cubist-cli/templates/orm/js/: hello.js.tpl  index.js.tpl  package.json.tpl
cubist-cli/templates/orm/rust/: cubist_gen_rs.tpl
cubist-cli/templates/orm/ts/: hello.ts.tpl  index.ts.tpl  package.json.tpl  tsconfig.json.tpl
cubist-cli/tests/: daemon_tests.rs  end_to_end.rs  new.rs  pre_compile.rs
cubist-cli/tests/fixtures/configs/: cfg1.json  cfg2.json
cubist-cli/tests/fixtures/configs/contracts/: c1.sol  c2.sol
cubist-cli/tests/fixtures/projects/circular_imports/: .gitignore  cubist-config.json
cubist-cli/tests/fixtures/projects/circular_imports/contracts/: Common.sol
cubist-cli/tests/fixtures/projects/circular_imports/contracts/bar/: Bar.sol
cubist-cli/tests/fixtures/projects/circular_imports/contracts/foo/: Foo.sol
cubist-cli/tests/fixtures/projects/counter/: cubist-config.json
cubist-cli/tests/fixtures/projects/counter/contracts/: From.sol  To.sol
cubist-cli/tests/fixtures/projects/counter_payable/: .gitignore  cubist-config.json
cubist-cli/tests/fixtures/projects/counter_payable/contracts/: From.sol  To.sol
cubist-cli/tests/fixtures/projects/openzeppelin_nft/: .gitignore  cubist-config.json
cubist-cli/tests/fixtures/projects/openzeppelin_nft/contracts/: GameItem.sol
cubist-cli/tests/fixtures/projects/validation_failure/: cubist-config.json
cubist-cli/tests/fixtures/projects/validation_failure/contracts/: invalid_solidity.sol
cubist-config/: Cargo.toml
cubist-config/scripts/: generate_schema.rs
cubist-config/src/: axelar_manifest.rs  bridge.rs  interpolation.rs  lib.rs  network.rs  paths.rs  pre_compile_manifest.rs  secret.rs  util.rs
cubist-config/tests/: config.rs  env.rs
cubist-config/tests/fixtures/: bad-config-compiler.json  bad-config-missing-network-profile.json  bad-config-paths.json  bad-config-project.json  cubist-config.json  good-config.json
cubist-localchains/: Cargo.toml
cubist-localchains/data/: resources.toml
cubist-localchains/scripts/: populate_hashes.rs
cubist-localchains/src/: config.rs  error.rs  historical.rs  lib.rs  progress.rs  provider.rs  proxy.rs  resource.rs  tracing.rs
cubist-localchains/src/provider/: avalanche.rs  ethereum.rs  polygon.rs  stellar.rs
cubist-proxy/: Cargo.toml  README.md
cubist-proxy/examples/: dump.rs  echo.rs  pass_echo.rs
cubist-proxy/src/: connector.rs  error.rs  jrpc.rs  lib.rs  offchain.rs  onchain.rs  pipeline.rs  transformer.rs
cubist-proxy/src/pipeline/: ava.rs  dump.rs  echo.rs  eth.rs  pass.rs
cubist-proxy/src/transformer/: convert.rs  copy.rs  error.rs  eth_creds.rs  switch.rs  trace.rs  uri.rs
cubist-sdk/: Cargo.toml
cubist-sdk/src/: analyze.rs  core.rs  gen.rs  hex.rs  lib.rs  parse.rs  target_handler.rs
cubist-sdk/src/analyze/: visit.rs
cubist-sdk/src/core/: contract.rs  cubist.rs  project.rs  transformer.rs
cubist-sdk/src/parse/: source_file.rs
cubist-sdk/src/target_handler/: solang.rs  solc.rs  soroban.rs
cubist-sdk/templates/: axelar_receiver.tpl  axelar_sender.tpl  cubist_sender.tpl  macros.tpl
cubist-sdk/tests/: gen.rs  parse.rs
cubist-sdk/tests/code/ava-eth/: AvaStorage.sol
cubist-sdk/tests/code/ava-eth-payable/: AvaStorage.sol  EthStorage.sol
cubist-sdk/tests/code/ava-eth-poly/: AvaStorage.sol  PolyStorage.sol  config.json
cubist-sdk/tests/code/bad-config/: AvaStorage.sol  EthStorage.sol  config.json
cubist-sdk/tests/code/bad-implicit-import/: AvaStorage.sol
cubist-sdk/tests/code/basic-alias/: AvaStorage.sol  EthStorage.sol
cubist-sdk/tests/code/charity-raffle/: CharityRaffle.sol  RafflePlayer.sol  config.json
cubist-sdk/tests/code/dirs/: config.json
cubist-sdk/tests/code/dirs/contracts/: User.sol
cubist-sdk/tests/code/dirs/contracts/lib/: CurrencyTransferLib.sol  FeeType.sol
cubist-sdk/tests/code/dirs/contracts/marketplace/: Marketplace.sol
cubist-sdk/tests/code/enum-forward/: Used.sol  User.sol  config.json
cubist-sdk/tests/code/import-forward/: AvaStorage.sol  EthStorage.sol  Util.sol
cubist-sdk/tests/code/license/: AvaStorage.sol  EthStorage.sol  contracts.sol
cubist-sdk/tests/code/marketplace/: config.json
cubist-sdk/tests/code/marketplace-all/: config.json
cubist-sdk/tests/code/marketplace-all/contracts/eip/interface/: IERC20.sol
cubist-sdk/tests/code/marketplace-all/contracts/extension/interface/: IPlatformFee.sol
cubist-sdk/tests/code/marketplace-all/contracts/interfaces/: IThirdwebContract.sol
cubist-sdk/tests/code/marketplace-all/contracts/interfaces/marketplace/: IMarketplace.sol
cubist-sdk/tests/code/marketplace/contracts/: User.sol
cubist-sdk/tests/code/nft-flower/: DynNFT.sol  Grower.sol  config.json
cubist-sdk/tests/code/only-owner/: Used.sol  User.sol
cubist-sdk/tests/code/private-function/: Used.sol  User.sol  config.json
cubist-sdk/tests/code/public-getter/: Used.sol  User.sol
cubist-sdk/tests/code/raffle/: Raffle.sol  RafflePlayer.sol  config.json
cubist-sdk/tests/code/rename-alias/: AvaStorage.sol  config.json
cubist-sdk/tests/code/return-value/: Used.sol
cubist-sdk/tests/code/star-alias/: AvaStorage.sol  EthStorage.sol
cubist-sdk/tests/code/struct-forward/: Used.sol  User.sol
cubist-sdk/tests/code/token-bridge/: README.md  cubist-config.json
cubist-sdk/tests/code/token-bridge/contracts/: ERC20Bridged.sol  README.md  TokenSender.sol
cubist-util/: Cargo.toml
cubist-util/src/: fs.rs  js_pkg_manager.rs  lib.rs  net.rs  proc.rs  tasks.rs  tera.rs
utils/: README.md  (+2 more)
xtask/: Cargo.toml
xtask/src/: generate_markdown.rs  generate_schema.rs  main.rs  populate_hashes.rs
(+47 files in other folders)
