[workspace]
members = [
    "cubist-cli",
    "cubist-config",
    "cubist-localchains",
    "cubist-proxy",
    "cubist-sdk",
    "cubist-util",
    "xtask",
]

[doc.extern-map.registries]
crates-io = "https://docs.rs/"


[workspace.dependencies]
assert_cmd = "2.0.8"
assert_matches = "1.5.0"
async-trait = "0.1.61"

base64 = "0.13.1"
blake3 = "1.3.1"

clap = "4.1.1"
clap_complete = "4.1.0"
clap_mangen = "0.2.7"
color-eyre = "0.6.2"
console = "0.15.5"
coins-bip39 = "0.7.0"
ctrlc = "3.2.4"
dialoguer = "0.10.3"
dirs = "4.0.0"
dotenv = "0.15.0"

eyre = "0.6.8"

ethers-contract-abigen = "1.0.2"
ethers-contract = "1.0.2"
ethers-core = "1.0.2"
ethers-solc = "1.0.2"
ethers-providers = "1.0.2"
ethers = "1.0.2"

flate2 = "1.0.25"
figment = "0.10.8"
fs_extra = "1.2.0"
futures = "0.3.25"

glob = "0.3.1"

hex = "0.4.3"
hyper = "0.14.23"
hyper-rustls = "0.23"
hyper-tungstenite = "0.8.2"

indicatif = "0.17.3"
lazy_static = "1.4.0"

# Using `crossbeam-channel` with `tokio` may cause issues
# (https://docs.rs/notify/latest/notify/#crossbeam-channel--tokio), so we
# disable it.
notify = { version = "5.0.0", default-features = false, features = ["macos_kqueue"] }

itertools = "0.10.5"

k256 = "0.11.6"

pin-project = "1.0.12"
rand = "0.8.5"
rusty-hook = "0.11.2"

once_cell = "1.17.0"

path-clean = "0.1.0"        # simple path cleaning
parse-display = "0.6.0"
paste = "1.0.11"
percent-encoding = "2.2.0"
pretty_assertions = "1.2.1"

regex = "1.7.1"
reqwest = "0.11.13"
rstest = "0.15.0"
rust-embed = "6.4.2"

schemars = "0.8.10"
secrecy = "0.8.0"
scopeguard = "1.1.0"
serde = "1.0.152"
serde_derive = "1.0.147"
serde_json = "1.0.91"
serde_with = "2.2.0"
serial_test = "0.9.0"

solang-parser = { git = "https://github.com/cubist-dev/solang/", rev = "78cb7d0326f36b39fc8f3b9af0a694e17a3f5e53" }

tar = "0.4.38"
tempfile = "3.3.0"
tempdir = "0.3.7"
tera = "1.17.1"
thiserror = "1.0.38"
tokio = "1.24.1"
tokio-rustls = "0.23"
tokio-tungstenite = "0.17"

toml = "0.5.11"

tracing = "0.1.36"
tracing-subscriber = "0.3.16"
tracing-test = "0.2.3"

url = "2.3.1"

walkdir = "2.3.2"

webpki = "0.22"
whoami = "1.3.0"
