[workspace]
members = [
    "cubist-cli",
    "cubist-config",
    "cubist-localchains",
    "cubist-proxy",
    "cubist-sdk",
    "cubist-util",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
assert_cmd = "2.0.8"
assert_matches = "1.5.0"
async-trait = "0.1.68"

base64 = "0.21.4"
blake3 = "1.5.0"

clap = "4.5.1"
clap_complete = "4.5.1"
clap_mangen = "0.2.20"
color-eyre = { version = "0.6.2", default-features = false }
console = "0.15.5"
convert_case = "0.6.0"
coins-bip39 = "0.7.0"
ctrlc = "3.2.5"

dialoguer = "0.10.3"
dirs = "4.0.0"
dotenv = "0.15.0"

eyre = "0.6.8"

ethers-contract-abigen = "1.0.2"
ethers-contract = "1.0.2"
ethers-core = "1.0.2"
ethers-solc = "1.0.2"
ethers-providers = "1.0.2"
ethers = "1.0.2"

flate2 = "1.0.25"
figment = "0.10.16"
fs_extra = "1.3.0"
futures = "0.3.26"

glob = "0.3.1"

hex = "0.4.3"
hyper = "0.14.24"
hyper-rustls = "0.24.1"
hyper-tungstenite = "0.8.2"

indicatif = "0.17.8"
lazy_static = "1.4.0"

# Using `crossbeam-channel` with `tokio` may cause issues
# (https://docs.rs/notify/latest/notify/#crossbeam-channel--tokio), so we
# disable it.
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }

itertools = "0.10.5"

k256 = "0.11.6"

pin-project = "1.0.12"
rand = "0.8.5"
rusty-hook = "0.11.2"

once_cell = "1.17.1"

path-clean = "0.1.0"        # simple path cleaning
parse-display = "0.6.0"
paste = "1.0.12"
percent-encoding = "2.2.0"
pretty_assertions = "1.2.1"

regex = "1.8.4"
remove_dir_all = "0.8.2"
reqwest = "0.11.24"
rstest = "0.18.2"
rust-embed = "8.0.0"

schemars = "0.8.16"
secrecy = "0.8.0"
scopeguard = "1.1.0"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
serde_with = "3.6.1"
serial_test = "0.9.0"

sha2 = "0.10.8"

solang-parser = { git = "https://github.com/cubist-dev/solang/", rev = "78cb7d0326f36b39fc8f3b9af0a694e17a3f5e53" }
soroban-env-host = "20.2.2"
soroban-sdk = "20.3.2"
soroban-spec = "20.3.2"
soroban-spec-rust = "20.3.2"

tar = "0.4.38"
tempfile = "3.6.0"
tempdir = "0.3.7"
tera = "1.17.1"
thiserror = "1.0.55"
tokio = "1.28.2"
tokio-rustls = "0.24.1"
tokio-tungstenite = "0.17"

toml = "0.7.7"

tracing = "0.1.36"
tracing-subscriber = "0.3.16"
tracing-test = "0.2.4"

url = "2.3.1"

walkdir = "2.3.2"

webpki = "0.22.4"
whoami = "1.3.0"

[profile.ci]
inherits = "dev"
debug = false
strip = true
