[package]
name = "xtask"
version = "0.2.1-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubist-cli = { path = "../cubist-cli" }
cubist-config = { path = "../cubist-config" }
cubist-localchains = { path = "../cubist-localchains" }

blake3.workspace = true
clap = { workspace = true, features = ["derive", "color", "wrap_help"] } # cli
clap_complete.workspace = true
clap_mangen.workspace = true
color-eyre.workspace = true
schemars = { workspace = true, features = ["url"] }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tempdir.workspace = true
tokio = {workspace = true, features = ["rt", "rt-multi-thread", "macros", "fs", "process", "signal", "io-util"]} 
toml.workspace = true
